// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PatronCurrentLoans tests should load the details component 1`] = `
<Loader>
  <Error>
    <ResultsTable
      columns={
        Array [
          Object {
            "formatter": [Function],
            "title": "PID",
          },
          Object {
            "field": "metadata.item.barcode",
            "title": "Item barcode",
          },
          Object {
            "field": "metadata.start_date",
            "formatter": [Function],
            "title": "Start date",
          },
          Object {
            "field": "metadata.end_date",
            "formatter": [Function],
            "title": "End date",
          },
          Object {
            "field": "metadata.extension_count",
            "title": "Renewals",
          },
        ]
      }
      currentPage={1}
      data={Array []}
      headerActionComponent={null}
      name="current loans"
      paginationComponent={null}
      seeAllComponent={
        <SeeAllButton
          disabled={false}
          fluid={false}
          to="/backoffice/loans?q=(patron_pid:2 AND state:(ITEM_ON_LOAN))&sort=-mostrecent"
        />
      }
      showAllResults={false}
      showMaxRows={5}
      singleLine={false}
      subtitle=""
      title=""
      totalHitsCount={0}
    />
  </Error>
</Loader>
`;

exports[`PatronCurrentLoans tests should render patron loans 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <PatronCurrentLoans
      data={
        Object {
          "hits": Array [
            Object {
              "id": 1,
              "metadata": Object {
                "document_pid": "docid-1",
                "end_date": "2018-07-28",
                "item_pid": Object {},
                "patron": Object {
                  "email": "patron1@test.ch",
                },
                "patron_pid": "1",
                "pickup_location_pid": "1",
                "pid": "loanid-1",
                "request_expire_date": "2019-06-28",
                "request_start_date": "2018-06-28",
                "start_date": "2018-06-28",
                "state": "PENDING",
                "transaction_date": "2018-06-29",
                "transaction_location_pid": "1",
              },
              "pid": "loan1",
            },
            Object {
              "id": 2,
              "metadata": Object {
                "document_pid": "docid-1",
                "end_date": "2018-07-28",
                "item_pid": Object {
                  "type": "pitmid",
                  "value": "itemid-2",
                },
                "patron": Object {
                  "email": "patron2@test.ch",
                },
                "patron_pid": "1",
                "pickup_location_pid": "1",
                "pid": "loanid-2",
                "request_expire_date": "2019-06-28",
                "request_start_date": "2018-06-28",
                "start_date": "2018-06-28",
                "state": "PENDING",
                "transaction_date": "2018-06-29",
                "transaction_location_pid": "1",
              },
              "pid": "loan2",
            },
          ],
          "total": 2,
        }
      }
      fetchPatronCurrentLoans={
        [MockFunction] {
          "calls": Array [
            Array [
              "2",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      loanState=""
      patronDetails={
        Object {
          "user_pid": "2",
        }
      }
      showMaxLoans={5}
    >
      <Loader>
        <Error>
          <ResultsTable
            columns={
              Array [
                Object {
                  "formatter": [Function],
                  "title": "PID",
                },
                Object {
                  "field": "metadata.item.barcode",
                  "title": "Item barcode",
                },
                Object {
                  "field": "metadata.start_date",
                  "formatter": [Function],
                  "title": "Start date",
                },
                Object {
                  "field": "metadata.end_date",
                  "formatter": [Function],
                  "title": "End date",
                },
                Object {
                  "field": "metadata.extension_count",
                  "title": "Renewals",
                },
              ]
            }
            currentPage={1}
            data={
              Array [
                Object {
                  "id": 1,
                  "metadata": Object {
                    "document_pid": "docid-1",
                    "end_date": "2018-07-28",
                    "item_pid": Object {},
                    "patron": Object {
                      "email": "patron1@test.ch",
                    },
                    "patron_pid": "1",
                    "pickup_location_pid": "1",
                    "pid": "loanid-1",
                    "request_expire_date": "2019-06-28",
                    "request_start_date": "2018-06-28",
                    "start_date": "2018-06-28",
                    "state": "PENDING",
                    "transaction_date": "2018-06-29",
                    "transaction_location_pid": "1",
                  },
                  "pid": "loan1",
                },
                Object {
                  "id": 2,
                  "metadata": Object {
                    "document_pid": "docid-1",
                    "end_date": "2018-07-28",
                    "item_pid": Object {
                      "type": "pitmid",
                      "value": "itemid-2",
                    },
                    "patron": Object {
                      "email": "patron2@test.ch",
                    },
                    "patron_pid": "1",
                    "pickup_location_pid": "1",
                    "pid": "loanid-2",
                    "request_expire_date": "2019-06-28",
                    "request_start_date": "2018-06-28",
                    "start_date": "2018-06-28",
                    "state": "PENDING",
                    "transaction_date": "2018-06-29",
                    "transaction_location_pid": "1",
                  },
                  "pid": "loan2",
                },
              ]
            }
            headerActionComponent={null}
            name="current loans"
            paginationComponent={null}
            seeAllComponent={
              <SeeAllButton
                disabled={false}
                fluid={false}
                to="/backoffice/loans?q=(patron_pid:2 AND state:(ITEM_ON_LOAN))&sort=-mostrecent"
              />
            }
            showAllResults={false}
            showMaxRows={5}
            singleLine={false}
            subtitle=""
            title=""
            totalHitsCount={2}
          >
            <Table
              as="table"
              compact={true}
              name="current loans"
              selectable={true}
              striped={true}
              subtitle=""
              title=""
              unstackable={true}
            >
              <table
                className="ui selectable striped unstackable compact table"
                name="current loans"
                subtitle=""
                title=""
              >
                <ResultsTableHeader
                  columns={
                    Array [
                      Object {
                        "formatter": [Function],
                        "title": "PID",
                      },
                      Object {
                        "field": "metadata.item.barcode",
                        "title": "Item barcode",
                      },
                      Object {
                        "field": "metadata.start_date",
                        "formatter": [Function],
                        "title": "Start date",
                      },
                      Object {
                        "field": "metadata.end_date",
                        "formatter": [Function],
                        "title": "End date",
                      },
                      Object {
                        "field": "metadata.extension_count",
                        "title": "Renewals",
                      },
                    ]
                  }
                >
                  <TableHeader
                    as="thead"
                  >
                    <thead
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="header"
                      >
                        <tr
                          className=""
                          data-test="header"
                        >
                          <TableHeaderCell
                            as="th"
                            key="PID"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                PID
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Item barcode"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Item barcode
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Start date"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Start date
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="End date"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                End date
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Renewals"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Renewals
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                        </tr>
                      </TableRow>
                    </thead>
                  </TableHeader>
                </ResultsTableHeader>
                <ResultsTableBody
                  columns={
                    Array [
                      Object {
                        "formatter": [Function],
                        "title": "PID",
                      },
                      Object {
                        "field": "metadata.item.barcode",
                        "title": "Item barcode",
                      },
                      Object {
                        "field": "metadata.start_date",
                        "formatter": [Function],
                        "title": "Start date",
                      },
                      Object {
                        "field": "metadata.end_date",
                        "formatter": [Function],
                        "title": "End date",
                      },
                      Object {
                        "field": "metadata.extension_count",
                        "title": "Renewals",
                      },
                    ]
                  }
                  rows={
                    Array [
                      Object {
                        "id": 1,
                        "metadata": Object {
                          "document_pid": "docid-1",
                          "end_date": "2018-07-28",
                          "item_pid": Object {},
                          "patron": Object {
                            "email": "patron1@test.ch",
                          },
                          "patron_pid": "1",
                          "pickup_location_pid": "1",
                          "pid": "loanid-1",
                          "request_expire_date": "2019-06-28",
                          "request_start_date": "2018-06-28",
                          "start_date": "2018-06-28",
                          "state": "PENDING",
                          "transaction_date": "2018-06-29",
                          "transaction_location_pid": "1",
                        },
                        "pid": "loan1",
                      },
                      Object {
                        "id": 2,
                        "metadata": Object {
                          "document_pid": "docid-1",
                          "end_date": "2018-07-28",
                          "item_pid": Object {
                            "type": "pitmid",
                            "value": "itemid-2",
                          },
                          "patron": Object {
                            "email": "patron2@test.ch",
                          },
                          "patron_pid": "1",
                          "pickup_location_pid": "1",
                          "pid": "loanid-2",
                          "request_expire_date": "2019-06-28",
                          "request_start_date": "2018-06-28",
                          "start_date": "2018-06-28",
                          "state": "PENDING",
                          "transaction_date": "2018-06-29",
                          "transaction_location_pid": "1",
                        },
                        "pid": "loan2",
                      },
                    ]
                  }
                >
                  <TableBody
                    as="tbody"
                  >
                    <tbody
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="loan1"
                        key="loan1"
                      >
                        <tr
                          className=""
                          data-test="loan1"
                        >
                          <TableCell
                            as="td"
                            data-label="PID"
                            data-test="0-loan1"
                            key="0-loan1"
                          >
                            <td
                              className=""
                              data-label="PID"
                              data-test="0-loan1"
                            >
                              <Link
                                data-test="loanid-1"
                                to="url/loanid-1"
                              >
                                <LinkAnchor
                                  data-test="loanid-1"
                                  href="/url/loanid-1"
                                  navigate={[Function]}
                                >
                                  <a
                                    data-test="loanid-1"
                                    href="/url/loanid-1"
                                    onClick={[Function]}
                                  >
                                    loanid-1
                                  </a>
                                </LinkAnchor>
                              </Link>
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-label="Item barcode"
                            data-test="1-loan1"
                            key="1-loan1"
                          >
                            <td
                              className=""
                              data-label="Item barcode"
                              data-test="1-loan1"
                            >
                              -
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-label="Start date"
                            data-test="2-loan1"
                            key="2-loan1"
                          >
                            <td
                              className=""
                              data-label="Start date"
                              data-test="2-loan1"
                            >
                              2018-06-28
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-label="End date"
                            data-test="3-loan1"
                            key="3-loan1"
                          >
                            <td
                              className=""
                              data-label="End date"
                              data-test="3-loan1"
                            >
                              2018-07-28
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-label="Renewals"
                            data-test="4-loan1"
                            key="4-loan1"
                          >
                            <td
                              className=""
                              data-label="Renewals"
                              data-test="4-loan1"
                            >
                              -
                            </td>
                          </TableCell>
                        </tr>
                      </TableRow>
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="loan2"
                        key="loan2"
                      >
                        <tr
                          className=""
                          data-test="loan2"
                        >
                          <TableCell
                            as="td"
                            data-label="PID"
                            data-test="0-loan2"
                            key="0-loan2"
                          >
                            <td
                              className=""
                              data-label="PID"
                              data-test="0-loan2"
                            >
                              <Link
                                data-test="loanid-2"
                                to="url/loanid-2"
                              >
                                <LinkAnchor
                                  data-test="loanid-2"
                                  href="/url/loanid-2"
                                  navigate={[Function]}
                                >
                                  <a
                                    data-test="loanid-2"
                                    href="/url/loanid-2"
                                    onClick={[Function]}
                                  >
                                    loanid-2
                                  </a>
                                </LinkAnchor>
                              </Link>
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-label="Item barcode"
                            data-test="1-loan2"
                            key="1-loan2"
                          >
                            <td
                              className=""
                              data-label="Item barcode"
                              data-test="1-loan2"
                            >
                              -
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-label="Start date"
                            data-test="2-loan2"
                            key="2-loan2"
                          >
                            <td
                              className=""
                              data-label="Start date"
                              data-test="2-loan2"
                            >
                              2018-06-28
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-label="End date"
                            data-test="3-loan2"
                            key="3-loan2"
                          >
                            <td
                              className=""
                              data-label="End date"
                              data-test="3-loan2"
                            >
                              2018-07-28
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-label="Renewals"
                            data-test="4-loan2"
                            key="4-loan2"
                          >
                            <td
                              className=""
                              data-label="Renewals"
                              data-test="4-loan2"
                            >
                              -
                            </td>
                          </TableCell>
                        </tr>
                      </TableRow>
                    </tbody>
                  </TableBody>
                </ResultsTableBody>
                <ResultsTableFooter
                  allRowsNumber={2}
                  columnsNumber={5}
                  currentPage={1}
                  paginationComponent={null}
                  seeAllComponent={
                    <SeeAllButton
                      disabled={false}
                      fluid={false}
                      to="/backoffice/loans?q=(patron_pid:2 AND state:(ITEM_ON_LOAN))&sort=-mostrecent"
                    />
                  }
                  showAllResults={false}
                  showMaxRows={5}
                />
              </table>
            </Table>
          </ResultsTable>
        </Error>
      </Loader>
    </PatronCurrentLoans>
  </Router>
</BrowserRouter>
`;

exports[`PatronCurrentLoans tests should render show a message with no user loans 1`] = `
<PatronCurrentLoans
  data={
    Object {
      "hits": Array [],
      "total": 0,
    }
  }
  fetchPatronCurrentLoans={
    [MockFunction] {
      "calls": Array [
        Array [
          "2",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  loanState=""
  patronDetails={
    Object {
      "user_pid": "2",
    }
  }
  showMaxLoans={5}
>
  <Loader>
    <Error>
      <ResultsTable
        columns={
          Array [
            Object {
              "formatter": [Function],
              "title": "PID",
            },
            Object {
              "field": "metadata.item.barcode",
              "title": "Item barcode",
            },
            Object {
              "field": "metadata.start_date",
              "formatter": [Function],
              "title": "Start date",
            },
            Object {
              "field": "metadata.end_date",
              "formatter": [Function],
              "title": "End date",
            },
            Object {
              "field": "metadata.extension_count",
              "title": "Renewals",
            },
          ]
        }
        currentPage={1}
        data={Array []}
        headerActionComponent={null}
        name="current loans"
        paginationComponent={null}
        seeAllComponent={
          <SeeAllButton
            disabled={false}
            fluid={false}
            to="/backoffice/loans?q=(patron_pid:2 AND state:(ITEM_ON_LOAN))&sort=-mostrecent"
          />
        }
        showAllResults={false}
        showMaxRows={5}
        singleLine={false}
        subtitle=""
        title=""
        totalHitsCount={0}
      >
        <Message
          data-test="no-results"
          icon={true}
          info={true}
        >
          <div
            className="ui icon info message"
            data-test="no-results"
          >
            <MessageContent>
              <div
                className="content"
              >
                <MessageHeader>
                  <div
                    className="header"
                  >
                    No results found
                  </div>
                </MessageHeader>
                There are no 
                current loans
                .
              </div>
            </MessageContent>
          </div>
        </Message>
      </ResultsTable>
    </Error>
  </Loader>
</PatronCurrentLoans>
`;

exports[`PatronCurrentLoans tests should render the see all button when showing only a few patron loans 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <PatronCurrentLoans
      data={
        Object {
          "hits": Array [
            Object {
              "id": 1,
              "metadata": Object {
                "document_pid": "docid-1",
                "end_date": "2018-07-28",
                "item_pid": Object {},
                "patron": Object {
                  "email": "patron1@test.ch",
                },
                "patron_pid": "1",
                "pickup_location_pid": "1",
                "pid": "loanid-1",
                "request_expire_date": "2019-06-28",
                "request_start_date": "2018-06-28",
                "start_date": "2018-06-28",
                "state": "PENDING",
                "transaction_date": "2018-06-29",
                "transaction_location_pid": "1",
              },
              "pid": "loan1",
            },
            Object {
              "id": 2,
              "metadata": Object {
                "document_pid": "docid-1",
                "end_date": "2018-07-28",
                "item_pid": Object {
                  "type": "pitmid",
                  "value": "itemid-2",
                },
                "patron": Object {
                  "email": "patron2@test.ch",
                },
                "patron_pid": "1",
                "pickup_location_pid": "1",
                "pid": "loanid-2",
                "request_expire_date": "2019-06-28",
                "request_start_date": "2018-06-28",
                "start_date": "2018-06-28",
                "state": "PENDING",
                "transaction_date": "2018-06-29",
                "transaction_location_pid": "1",
              },
              "pid": "loan2",
            },
          ],
          "total": 2,
        }
      }
      fetchPatronCurrentLoans={
        [MockFunction] {
          "calls": Array [
            Array [
              "2",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      patronDetails={
        Object {
          "user_pid": "2",
        }
      }
      showMaxLoans={1}
    >
      <Loader>
        <Error>
          <ResultsTable
            columns={
              Array [
                Object {
                  "formatter": [Function],
                  "title": "PID",
                },
                Object {
                  "field": "metadata.item.barcode",
                  "title": "Item barcode",
                },
                Object {
                  "field": "metadata.start_date",
                  "formatter": [Function],
                  "title": "Start date",
                },
                Object {
                  "field": "metadata.end_date",
                  "formatter": [Function],
                  "title": "End date",
                },
                Object {
                  "field": "metadata.extension_count",
                  "title": "Renewals",
                },
              ]
            }
            currentPage={1}
            data={
              Array [
                Object {
                  "id": 1,
                  "metadata": Object {
                    "document_pid": "docid-1",
                    "end_date": "2018-07-28",
                    "item_pid": Object {},
                    "patron": Object {
                      "email": "patron1@test.ch",
                    },
                    "patron_pid": "1",
                    "pickup_location_pid": "1",
                    "pid": "loanid-1",
                    "request_expire_date": "2019-06-28",
                    "request_start_date": "2018-06-28",
                    "start_date": "2018-06-28",
                    "state": "PENDING",
                    "transaction_date": "2018-06-29",
                    "transaction_location_pid": "1",
                  },
                  "pid": "loan1",
                },
                Object {
                  "id": 2,
                  "metadata": Object {
                    "document_pid": "docid-1",
                    "end_date": "2018-07-28",
                    "item_pid": Object {
                      "type": "pitmid",
                      "value": "itemid-2",
                    },
                    "patron": Object {
                      "email": "patron2@test.ch",
                    },
                    "patron_pid": "1",
                    "pickup_location_pid": "1",
                    "pid": "loanid-2",
                    "request_expire_date": "2019-06-28",
                    "request_start_date": "2018-06-28",
                    "start_date": "2018-06-28",
                    "state": "PENDING",
                    "transaction_date": "2018-06-29",
                    "transaction_location_pid": "1",
                  },
                  "pid": "loan2",
                },
              ]
            }
            headerActionComponent={null}
            name="current loans"
            paginationComponent={null}
            seeAllComponent={
              <SeeAllButton
                disabled={false}
                fluid={false}
                to="/backoffice/loans?q=(patron_pid:2 AND state:(ITEM_ON_LOAN))&sort=-mostrecent"
              />
            }
            showAllResults={false}
            showMaxRows={1}
            singleLine={false}
            subtitle=""
            title=""
            totalHitsCount={2}
          >
            <Table
              as="table"
              compact={true}
              name="current loans"
              selectable={true}
              striped={true}
              subtitle=""
              title=""
              unstackable={true}
            >
              <table
                className="ui selectable striped unstackable compact table"
                name="current loans"
                subtitle=""
                title=""
              >
                <ResultsTableHeader
                  columns={
                    Array [
                      Object {
                        "formatter": [Function],
                        "title": "PID",
                      },
                      Object {
                        "field": "metadata.item.barcode",
                        "title": "Item barcode",
                      },
                      Object {
                        "field": "metadata.start_date",
                        "formatter": [Function],
                        "title": "Start date",
                      },
                      Object {
                        "field": "metadata.end_date",
                        "formatter": [Function],
                        "title": "End date",
                      },
                      Object {
                        "field": "metadata.extension_count",
                        "title": "Renewals",
                      },
                    ]
                  }
                >
                  <TableHeader
                    as="thead"
                  >
                    <thead
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="header"
                      >
                        <tr
                          className=""
                          data-test="header"
                        >
                          <TableHeaderCell
                            as="th"
                            key="PID"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                PID
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Item barcode"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Item barcode
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Start date"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Start date
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="End date"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                End date
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Renewals"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Renewals
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                        </tr>
                      </TableRow>
                    </thead>
                  </TableHeader>
                </ResultsTableHeader>
                <ResultsTableBody
                  columns={
                    Array [
                      Object {
                        "formatter": [Function],
                        "title": "PID",
                      },
                      Object {
                        "field": "metadata.item.barcode",
                        "title": "Item barcode",
                      },
                      Object {
                        "field": "metadata.start_date",
                        "formatter": [Function],
                        "title": "Start date",
                      },
                      Object {
                        "field": "metadata.end_date",
                        "formatter": [Function],
                        "title": "End date",
                      },
                      Object {
                        "field": "metadata.extension_count",
                        "title": "Renewals",
                      },
                    ]
                  }
                  rows={
                    Array [
                      Object {
                        "id": 1,
                        "metadata": Object {
                          "document_pid": "docid-1",
                          "end_date": "2018-07-28",
                          "item_pid": Object {},
                          "patron": Object {
                            "email": "patron1@test.ch",
                          },
                          "patron_pid": "1",
                          "pickup_location_pid": "1",
                          "pid": "loanid-1",
                          "request_expire_date": "2019-06-28",
                          "request_start_date": "2018-06-28",
                          "start_date": "2018-06-28",
                          "state": "PENDING",
                          "transaction_date": "2018-06-29",
                          "transaction_location_pid": "1",
                        },
                        "pid": "loan1",
                      },
                    ]
                  }
                >
                  <TableBody
                    as="tbody"
                  >
                    <tbody
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="loan1"
                        key="loan1"
                      >
                        <tr
                          className=""
                          data-test="loan1"
                        >
                          <TableCell
                            as="td"
                            data-label="PID"
                            data-test="0-loan1"
                            key="0-loan1"
                          >
                            <td
                              className=""
                              data-label="PID"
                              data-test="0-loan1"
                            >
                              <Link
                                data-test="loanid-1"
                                to="url/loanid-1"
                              >
                                <LinkAnchor
                                  data-test="loanid-1"
                                  href="/url/loanid-1"
                                  navigate={[Function]}
                                >
                                  <a
                                    data-test="loanid-1"
                                    href="/url/loanid-1"
                                    onClick={[Function]}
                                  >
                                    loanid-1
                                  </a>
                                </LinkAnchor>
                              </Link>
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-label="Item barcode"
                            data-test="1-loan1"
                            key="1-loan1"
                          >
                            <td
                              className=""
                              data-label="Item barcode"
                              data-test="1-loan1"
                            >
                              -
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-label="Start date"
                            data-test="2-loan1"
                            key="2-loan1"
                          >
                            <td
                              className=""
                              data-label="Start date"
                              data-test="2-loan1"
                            >
                              2018-06-28
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-label="End date"
                            data-test="3-loan1"
                            key="3-loan1"
                          >
                            <td
                              className=""
                              data-label="End date"
                              data-test="3-loan1"
                            >
                              2018-07-28
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-label="Renewals"
                            data-test="4-loan1"
                            key="4-loan1"
                          >
                            <td
                              className=""
                              data-label="Renewals"
                              data-test="4-loan1"
                            >
                              -
                            </td>
                          </TableCell>
                        </tr>
                      </TableRow>
                    </tbody>
                  </TableBody>
                </ResultsTableBody>
                <ResultsTableFooter
                  allRowsNumber={2}
                  columnsNumber={5}
                  currentPage={1}
                  paginationComponent={null}
                  seeAllComponent={
                    <SeeAllButton
                      disabled={false}
                      fluid={false}
                      to="/backoffice/loans?q=(patron_pid:2 AND state:(ITEM_ON_LOAN))&sort=-mostrecent"
                    />
                  }
                  showAllResults={false}
                  showMaxRows={1}
                >
                  <TableFooter
                    as="tfoot"
                    data-test="footer"
                    fullWidth={true}
                  >
                    <TableHeader
                      as="tfoot"
                      data-test="footer"
                      fullWidth={true}
                    >
                      <tfoot
                        className="full-width"
                        data-test="footer"
                      >
                        <TableRow
                          as="tr"
                          cellAs="td"
                        >
                          <tr
                            className=""
                          >
                            <TableHeaderCell
                              as="th"
                              colSpan={6}
                              textAlign="right"
                            >
                              <TableCell
                                as="th"
                                className=""
                                colSpan={6}
                                textAlign="right"
                              >
                                <th
                                  className="right aligned"
                                  colSpan={6}
                                >
                                  <span
                                    className="results-table-compact-summary"
                                  >
                                    Showing entries 
                                    1
                                    -
                                    1
                                     of 
                                    2
                                     
                                  </span>
                                  <span>
                                    <SeeAllButton
                                      disabled={false}
                                      fluid={false}
                                      to="/backoffice/loans?q=(patron_pid:2 AND state:(ITEM_ON_LOAN))&sort=-mostrecent"
                                    >
                                      <Button
                                        as={
                                          Object {
                                            "$$typeof": Symbol(react.forward_ref),
                                            "displayName": "Link",
                                            "propTypes": Object {
                                              "innerRef": [Function],
                                              "onClick": [Function],
                                              "replace": [Function],
                                              "target": [Function],
                                              "to": [Function],
                                            },
                                            "render": [Function],
                                          }
                                        }
                                        disabled={false}
                                        fluid={false}
                                        size="tiny"
                                        to="/backoffice/loans?q=(patron_pid:2 AND state:(ITEM_ON_LOAN))&sort=-mostrecent"
                                      >
                                        <Ref
                                          innerRef={
                                            Object {
                                              "current": <a
                                                class="ui tiny button"
                                                href="/backoffice/loans?q=(patron_pid:2 AND state:(ITEM_ON_LOAN))&sort=-mostrecent"
                                                role="button"
                                              >
                                                See all
                                              </a>,
                                            }
                                          }
                                        >
                                          <RefForward
                                            innerRef={
                                              Object {
                                                "current": <a
                                                  class="ui tiny button"
                                                  href="/backoffice/loans?q=(patron_pid:2 AND state:(ITEM_ON_LOAN))&sort=-mostrecent"
                                                  role="button"
                                                >
                                                  See all
                                                </a>,
                                              }
                                            }
                                          >
                                            <Link
                                              className="ui tiny button"
                                              onClick={[Function]}
                                              role="button"
                                              to="/backoffice/loans?q=(patron_pid:2 AND state:(ITEM_ON_LOAN))&sort=-mostrecent"
                                            >
                                              <LinkAnchor
                                                className="ui tiny button"
                                                href="/backoffice/loans?q=(patron_pid:2 AND state:(ITEM_ON_LOAN))&sort=-mostrecent"
                                                navigate={[Function]}
                                                onClick={[Function]}
                                                role="button"
                                              >
                                                <a
                                                  className="ui tiny button"
                                                  href="/backoffice/loans?q=(patron_pid:2 AND state:(ITEM_ON_LOAN))&sort=-mostrecent"
                                                  onClick={[Function]}
                                                  role="button"
                                                >
                                                  See all
                                                </a>
                                              </LinkAnchor>
                                            </Link>
                                          </RefForward>
                                        </Ref>
                                      </Button>
                                    </SeeAllButton>
                                  </span>
                                  <span />
                                </th>
                              </TableCell>
                            </TableHeaderCell>
                          </tr>
                        </TableRow>
                      </tfoot>
                    </TableHeader>
                  </TableFooter>
                </ResultsTableFooter>
              </table>
            </Table>
          </ResultsTable>
        </Error>
      </Loader>
    </PatronCurrentLoans>
  </Router>
</BrowserRouter>
`;
